login and signup added

--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -32,13 +32,13 @@
                 <div class="card-heading"></div>
                 <div class="card-body">
                     <h2 class="title">LOG IN</h2>
-                    <form method="POST">
+                    <form action="../user/login" method="post" >
                         <div class="input-group">
-                            <input class="input--style-3" type="text" placeholder="userName" name="name">
+                            <input class="input--style-3" type="text" placeholder="Email" name="email">
                         </div>
                         
                         <div class="input-group">
-                            <input class="input--style-3" type="password" placeholder="Password" name="phone">
+                            <input class="input--style-3" type="password" placeholder="Password" name="password">
                         </div>
                         <div class="p-t-10">
                             <button class="btnn btnn--pill btnn--green" type="submit">Submit</button>
