--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -17,7 +17,7 @@
           <a class="dropdown-item text-white" href="#">Action</a>
           <a class="dropdown-item text-white" href="#">Another action</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item text-white" href="#">Logout</a>
+          <a class="dropdown-item text-white" href="/user/logout">Logout</a>
         </div>
       </li>
     </ul>
