nav setup but not done

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -14,11 +14,17 @@
         <i class="fas fa-user text-white"></i>  User managment
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item text-white" href="#">Action</a>
-          <a class="dropdown-item text-white" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item text-white" href="/user/logout">Logout</a>
-        </div>
+          {{# if user}}
+            <a class="dropdown-item text-secondary" href="/user/profile">Profile</a>
+            <a class="dropdown-item text-secondary" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+              <a class="dropdown-item text-secondary" href="/user/logout">Logout</a>
+            </div>
+          {{ else }}
+            <a class="dropdown-item text-secondary" href="/user/login">Login</a>
+            <a class="dropdown-item text-secondary" href="/user/signup">Signup</a>
+          {{/if}}
+          
       </li>
     </ul>
   </div>
