connect-mongostore setup added

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -10,7 +10,7 @@
   
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  {{>header}}
+  {{!-- {{>header}} --}}
   <body>
     
     {{{body}}}
