--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -16,7 +16,7 @@
                     <div class="row ">
                         <div class="col price">${{this.price}}</div>
                         <div class="col ">
-                            <a  href="#" class="btn btn-success float-right">Add to Cart</a>
+                            <a  href="/cart/{{this.id}}" class="btn btn-success float-right">Add to Cart</a>
                         </div> 
                     </div>    
                 </div>
