--- a/views/shop/cart.hbs
+++ b/views/shop/cart.hbs
@@ -13,7 +13,7 @@
                 </div>
                 
                  <div class="dropdown mt-3 float-right">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Dropdown button
                     </button>
                     <div class="dropdown-menu" data-toggle="dropdown" aria-labelledby="dropdownMenuButton">
