--- a/public/stylesheets/example5.css
+++ b/public/stylesheets/example5.css
@@ -1,5 +1,5 @@
 .example.example5 {
-  background-color: #2e86c1;
+  background-color: #0275d8 ;
 }
 
 .example.example5 * {
@@ -27,7 +27,7 @@
   font-size: 14px;
   font-weight: 500;
   color: #cdd0f8;
-  background-color: #3498db;
+  background-color: #0275d8;
 }
 
 .example.example5 fieldset legend + * {
@@ -134,9 +134,9 @@
   width: 100%;
   height: 40px;
   margin: 20px 0 0;
-  background-color: #fff;
+  background-color: #5cb85c ;
   border-radius: 6px;
-  color: #3498db;
+  color: #fff;
   font-weight: 500;
   cursor: pointer;
 }
