--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,13 +7,17 @@
   <div class="cotainer-fluid collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
     <ul class="navbar-nav  ">
       <li class="nav-item">
-        <a class="nav-link text-white" href="shop/cart"><i class="fas fa-shopping-cart mr-2 text-white"></i>Shoping Cart <span class="badge badge-success">{{session.cart.totalqty}}</span> </a>
+        <a class="nav-link text-white" href="/shop/cart"><i class="fas fa-shopping-cart mr-2 text-white"></i>Shoping Cart <span class="badge badge-success">{{session.cart.totalqty}}</span> </a>
       </li>
       <li class="nav-item dropdown mr-5">
-        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        {{!-- <a class="nav-link dropdown-toggle text-white" href="dropdown-menu" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-user text-white"></i>  User managment
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        </a> --}}
+        <div class="dropdown">
+      <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Dropdown button
+      </button>
+        <div id='dropdown-menu' class="dropdown-menu" aria-labelledby="navbarDropdown">
         {{# if login}}
           <a class="dropdown-item text-secondary" href="/user/profile">Profile</a>
             <a class="dropdown-item text-secondary" href="#">Another action</a>
