--- a/public/stylesheets/example5.css
+++ b/public/stylesheets/example5.css
@@ -1,178 +1,204 @@
-.example.example5 {
-  background-color: #0275d8 ;
+.example.example2 {
+  background-color: #fff;
 }
 
-.example.example5 * {
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+.example.example2 * {
+  font-family: Source Code Pro, Consolas, Menlo, monospace;
   font-size: 16px;
-  font-weight: 400;
-}
-
-#example5-paymentRequest {
-  max-width: 500px;
-  width: 100%;
-  margin-bottom: 10px;
-}
-
-.example.example5 fieldset {
-  border: 1px solid #fff;
-  padding: 15px;
-  border-radius: 6px;
-}
-
-.example.example5 fieldset legend {
-  margin: 0 auto;
-  padding: 0 10px;
-  text-align: center;
-  font-size: 14px;
   font-weight: 500;
-  color: #cdd0f8;
-  background-color: #0275d8;
 }
 
-.example.example5 fieldset legend + * {
-  clear: both;
-}
-
-.example.example5 .card-only {
-  display: block;
-}
-.example.example5 .payment-request-available {
-  display: none;
-}
-
-.example.example5 .row {
+.example.example2 .row {
   display: -ms-flexbox;
   display: flex;
-  margin: 0 0 10px;
+  margin: 0 5px 10px;
 }
 
-.example.example5 .field {
+.example.example2 .field {
   position: relative;
   width: 100%;
+  height: 50px;
+  margin: 0 10px;
 }
 
-.example.example5 .field + .field {
-  margin-left: 10px;
+.example.example2 .field.half-width {
+  width: 50%;
 }
 
-.example.example5 label {
+.example.example2 .field.quarter-width {
+  width: calc(25% - 10px);
+}
+
+.example.example2 .baseline {
+  position: absolute;
   width: 100%;
-  color: #cdd0f8;
-  font-size: 13px;
-  font-weight: 500;
+  height: 1px;
+  left: 0;
+  bottom: 0;
+  background-color: #cfd7df;
+  transition: background-color 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.example.example2 label {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 8px;
+  color: #cfd7df;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  transform-origin: 0 50%;
+  cursor: text;
+  pointer-events: none;
+  transition-property: color, transform;
+  transition-duration: 0.3s;
+  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.example.example5 .input {
+.example.example2 .input {
+  position: absolute;
   width: 100%;
-  color: #fff;
-  background: transparent;
-  padding: 5px 0 6px 0;
-  border-bottom: 1px solid #fff;
-  transition: border-color 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  left: 0;
+  bottom: 0;
+  padding-bottom: 7px;
+  color: #32325d;
+  background-color: transparent;
 }
 
-.example.example5 .input::-webkit-input-placeholder {
-  color: #fff;
+.example.example2 .input::-webkit-input-placeholder {
+  color: transparent;
+  transition: color 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.example.example5 .input::-moz-placeholder {
-  color: #fff;
+.example.example2 .input::-moz-placeholder {
+  color: transparent;
+  transition: color 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.example.example5 .input:-ms-input-placeholder {
-  color: #fff;
+.example.example2 .input:-ms-input-placeholder {
+  color: transparent;
+  transition: color 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.example.example5 .input.StripeElement--focus,
-.example.example5 .input:focus {
-  border-color: #fff;
-}
-.example.example5 .input.StripeElement--invalid {
-  border-color: #fff;
+.example.example2 .input.StripeElement {
+  opacity: 0;
+  transition: opacity 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: opacity;
 }
 
-.example.example5 input:-webkit-autofill,
-.example.example5 select:-webkit-autofill {
-  -webkit-text-fill-color: #fce883;
-  transition: background-color 100000000s;
-  -webkit-animation: 1ms void-animation-out;
+.example.example2 .input.focused,
+.example.example2 .input:not(.empty) {
+  opacity: 1;
 }
 
-.example.example5 .StripeElement--webkit-autofill {
-  background: transparent !important;
+.example.example2 .input.focused::-webkit-input-placeholder,
+.example.example2 .input:not(.empty)::-webkit-input-placeholder {
+  color: #cfd7df;
 }
 
-.example.example5 input,
-.example.example5 button,
-.example.example5 select {
-  -webkit-animation: 1ms void-animation-out;
+.example.example2 .input.focused::-moz-placeholder,
+.example.example2 .input:not(.empty)::-moz-placeholder {
+  color: #cfd7df;
+}
+
+.example.example2 .input.focused:-ms-input-placeholder,
+.example.example2 .input:not(.empty):-ms-input-placeholder {
+  color: #cfd7df;
+}
+
+.example.example2 .input.focused + label,
+.example.example2 .input:not(.empty) + label {
+  color: #aab7c4;
+  transform: scale(0.85) translateY(-25px);
+  cursor: default;
+}
+
+.example.example2 .input.focused + label {
+  color: #24b47e;
+}
+
+.example.example2 .input.invalid + label {
+  color: #ffa27b;
+}
+
+.example.example2 .input.focused + label + .baseline {
+  background-color: #24b47e;
+}
+
+.example.example2 .input.focused.invalid + label + .baseline {
+  background-color: #e25950;
+}
+
+.example.example2 input, .example.example2 button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   outline: none;
   border-style: none;
-  border-radius: 0;
 }
 
-.example.example5 select.input,
-.example.example5 select:-webkit-autofill {
-  background-image: url('data:image/svg+xml;utf8,<svg width="10px" height="5px" viewBox="0 0 10 5" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="#fff" d="M5.35355339,4.64644661 L9.14644661,0.853553391 L9.14644661,0.853553391 C9.34170876,0.658291245 9.34170876,0.341708755 9.14644661,0.146446609 C9.05267842,0.0526784202 8.92550146,-2.43597394e-17 8.79289322,0 L1.20710678,0 L1.20710678,0 C0.930964406,5.07265313e-17 0.707106781,0.223857625 0.707106781,0.5 C0.707106781,0.632608245 0.759785201,0.759785201 0.853553391,0.853553391 L4.64644661,4.64644661 L4.64644661,4.64644661 C4.84170876,4.84170876 5.15829124,4.84170876 5.35355339,4.64644661 Z" id="shape"></path></svg>');
-  background-position: 100%;
-  background-size: 10px 5px;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding-right: 20px;
+.example.example2 input:-webkit-autofill {
+  -webkit-text-fill-color: #e39f48;
+  transition: background-color 100000000s;
+  -webkit-animation: 1ms void-animation-out;
 }
 
-.example.example5 button {
+.example.example2 .StripeElement--webkit-autofill {
+  background: transparent !important;
+}
+
+.example.example2 input, .example.example2 button {
+  -webkit-animation: 1ms void-animation-out;
+}
+
+.example.example2 button {
   display: block;
-  width: 100%;
+  width: calc(100% - 30px);
   height: 40px;
-  margin: 20px 0 0;
-  background-color: #5cb85c ;
-  border-radius: 6px;
+  margin: 40px 15px 0;
+  background-color: #24b47e;
+  border-radius: 4px;
   color: #fff;
-  font-weight: 500;
+  text-transform: uppercase;
+  font-weight: 600;
   cursor: pointer;
 }
 
-.example.example5 button:active {
-  background-color: #cdd0f8;
+.example.example2 .error svg {
+  margin-top: 0 !important;
 }
 
-.example.example5 .error svg .base {
+.example.example2 .error svg .base {
+  fill: #e25950;
+}
+
+.example.example2 .error svg .glyph {
   fill: #fff;
 }
 
-.example.example5 .error svg .glyph {
-  fill: #9169d8;
+.example.example2 .error .message {
+  color: #e25950;
 }
 
-.example.example5 .error .message {
-  color: #fff;
+.example.example2 .success .icon .border {
+  stroke: #abe9d2;
 }
 
-.example.example5 .success .icon .border {
-  stroke: #bfaef6;
+.example.example2 .success .icon .checkmark {
+  stroke: #24b47e;
 }
 
-.example.example5 .success .icon .checkmark {
-  stroke: #fff;
+.example.example2 .success .title {
+  color: #32325d;
+  font-size: 16px !important;
 }
 
-.example.example5 .success .title {
-  color: #fff;
+.example.example2 .success .message {
+  color: #8898aa;
+  font-size: 13px !important;
 }
 
-.example.example5 .success .message {
-  color: #cdd0f8;
-}
-
-.example.example5 .success .reset path {
-  fill: #fff;
+.example.example2 .success .reset path {
+  fill: #24b47e;
 }
