--- a/views/shop/checkout.hbs
+++ b/views/shop/checkout.hbs
@@ -7,11 +7,12 @@
   <title data-tid="elements_examples.meta.title">Stripe Elements: Build beautiful, smart checkout flows</title>
   <meta data-tid="elements_examples.meta.description" name="description" content="Build beautiful, smart checkout flows.">
 
+  <link rel="shortcut icon" href="img/favicon.ico">
   <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon/180x180.png">
   <link rel="icon" href="img/apple-touch-icon/180x180.png">
 
   <script src="https://js.stripe.com/v3/"></script>
-  <script src="/javascripts/exapmle5.js" data-rel-js></script>
+  <script src="/javascripts/checkout.js" data-rel-js></script>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
@@ -20,77 +21,69 @@
   <link rel="stylesheet" type="text/css" href="/stylesheets/base.css" data-rel-css="" />
 
   <!-- CSS for each example: -->
+  
   <link rel="stylesheet" type="text/css" href="/stylesheets/example5.css" data-rel-css="" />
-
 </head>
 <body>
-  
   <div class="globalContent">
     <main>
-    {{!-- <div class="stripes">
-      <div class="stripe s1"></div> 
+    <div class="stripes">
+      <div class="stripe s1"></div>
       <div class="stripe s2"></div>
-      <div class="stripe s3"></div> 
-    </div> --}}
+      <div class="stripe s3"></div>
+    </div>
     <section class="container-lg">
-      <!--Intro-->
-      <!--Example 5-->
-      <div class="cell example example5" id="example-5">
-        <form action='/checkout.hbs' method="get"> 
-          <div id="example5-paymentRequest">
-            <!--Stripe paymentRequestButton Element inserted here-->
+      
+
+      <!--Example 2-->
+      <div class="cell example example2" id="example-2">
+        <form method="POST" action="/shop/checkout">
+          <div data-locale-reversible>
+            <div class="row">
+              <div class="field">
+                <input id="example2-address" data-tid="elements_examples.form.address_placeholder" class="input empty" type="text" placeholder="185 Berry St" required="" autocomplete="address-line1">
+                <label for="example2-address" data-tid="elements_examples.form.address_label">Address</label>
+                <div class="baseline"></div>
+              </div>
+            </div>
+            <div class="row" data-locale-reversible>
+              <div class="field half-width">
+                <input id="example2-city" data-tid="elements_examples.form.city_placeholder" class="input empty" type="text" placeholder="San Francisco" required="" autocomplete="address-level2">
+                <label for="example2-city" data-tid="elements_examples.form.city_label">City</label>
+                <div class="baseline"></div>
+              </div>
+              <div class="field quarter-width">
+                <input  id="example2-state" data-tid="elements_examples.form.state_placeholder" class="input empty" type="text" placeholder="CA" required="" autocomplete="address-level1">
+                <label for="example2-state" data-tid="elements_examples.form.state_label">State</label>
+                <div class="baseline"></div>
+              </div>
+              <div class="field quarter-width">
+                <input id="example2-zip" data-tid="elements_examples.form.postal_code_placeholder" class="input empty" type="text" placeholder="94107" required="" autocomplete="postal-code">
+                <label for="example2-zip" data-tid="elements_examples.form.postal_code_label">ZIP</label>
+                <div class="baseline"></div>
+              </div>
+            </div>
           </div>
-          <fieldset>
-            <legend class="card-only" data-tid="elements_examples.form.pay_with_card">Pay with card</legend>
-            <legend class="payment-request-available" data-tid="elements_examples.form.enter_card_manually">Or enter card details</legend>
-            <div class="row">
-              <div class="field">
-                <label for="example5-name" data-tid="elements_examples.form.name_label">Name</label>
-                <input id="example5-name" data-tid="elements_examples.form.name_placeholder" class="input" type="text" placeholder="Jane Doe" required="" autocomplete="name">
-              </div>
+          <div class="row">
+            <div class="field">
+              <div id="example2-card-number" class="input empty"></div>
+              <label for="example2-card-number" data-tid="elements_examples.form.card_number_label">Card number</label>
+              <div class="baseline"></div>
             </div>
-            <div class="row">
-              <div class="field">
-                <label for="example5-email" data-tid="elements_examples.form.email_label">Email</label>
-                <input id="example5-email" data-tid="elements_examples.form.email_placeholder" class="input" type="text" placeholder="janedoe@gmail.com" required="" autocomplete="email">
-              </div>
-              <div class="field">
-                <label for="example5-phone" data-tid="elements_examples.form.phone_label">Phone</label>
-                <input id="example5-phone" data-tid="elements_examples.form.phone_placeholder" class="input" type="text" placeholder="91 7736 868256" required="" autocomplete="tel">
-              </div>
+          </div>
+          <div class="row">
+            <div class="field half-width">
+              <div id="example2-card-expiry" class="input empty"></div>
+              <label for="example2-card-expiry" data-tid="elements_examples.form.card_expiry_label">Expiration</label>
+              <div class="baseline"></div>
             </div>
-            <div data-locale-reversible>
-              <div name=address>
-              <div class="row">
-                <div class="field">
-                  <label for="example5-address" data-tid="elements_examples.form.address_label">Address</label>
-                  <input id="example5-address" data-tid="elements_examples.form.address_placeholder" class="input" type="text" placeholder="185 Berry St" required="" autocomplete="address-line1" name="add">
-                </div>
-              </div>
-              <div class="row" data-locale-reversible>
-                <div class="field">
-                  <label for="example5-city" data-tid="elements_examples.form.city_label">City</label>
-                  <input id="example5-city" data-tid="elements_examples.form.city_placeholder " name="city" class="input" type="text" placeholder="San Francisco" required="" autocomplete="address-level2">
-                </div>
-                <div class="field">
-                  <label for="example5-state" data-tid="elements_examples.form.state_label">State</label>
-                  <input id="example5-state" data-tid="elements_examples.form.state_placeholder" name="state" class="input empty" type="text" placeholder="CA" required="" autocomplete="address-level1">
-                </div>
-                <div class="field">
-                  <label for="example5-zip" data-tid="elements_examples.form.postal_code_label">ZIP</label>
-                  <input id="example5-zip" data-tid="elements_examples.form.postal_code_placeholder" name="zip" class="input empty" type="text" placeholder="94107" required="" autocomplete="postal-code">
-                </div>
-              </div>
+            <div class="field half-width">
+              <div id="example2-card-cvc" class="input empty"></div>
+              <label for="example2-card-cvc" data-tid="elements_examples.form.card_cvc_label">CVC</label>
+              <div class="baseline"></div>
             </div>
-            </div>
-            <div class="row">
-              <div class="field">
-                <label for="example5-card" data-tid="elements_examples.form.card_label">Card</label>
-                <div id="example5-card" class="input"></div>
-              </div>
-            </div>
-            <button type="submit" data-tid="elements_examples.form.pay_button">Pay ${{total}}</button>
-          </fieldset>
+          </div>
+        <button type="submit" data-tid="elements_examples.form.pay_button">Pay $25</button>
           <div class="error" role="alert"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
               <path class="base" fill="#000" d="M8.5,17 C3.80557963,17 0,13.1944204 0,8.5 C0,3.80557963 3.80557963,0 8.5,0 C13.1944204,0 17,3.80557963 17,8.5 C17,13.1944204 13.1944204,17 8.5,17 Z"></path>
               <path class="glyph" fill="#FFF" d="M8.5,7.29791847 L6.12604076,4.92395924 C5.79409512,4.59201359 5.25590488,4.59201359 4.92395924,4.92395924 C4.59201359,5.25590488 4.59201359,5.79409512 4.92395924,6.12604076 L7.29791847,8.5 L4.92395924,10.8739592 C4.59201359,11.2059049 4.59201359,11.7440951 4.92395924,12.0760408 C5.25590488,12.4079864 5.79409512,12.4079864 6.12604076,12.0760408 L8.5,9.70208153 L10.8739592,12.0760408 C11.2059049,12.4079864 11.7440951,12.4079864 12.0760408,12.0760408 C12.4079864,11.7440951 12.4079864,11.2059049 12.0760408,10.8739592 L9.70208153,8.5 L12.0760408,6.12604076 C12.4079864,5.79409512 12.4079864,5.25590488 12.0760408,4.92395924 C11.7440951,4.59201359 11.2059049,4.59201359 10.8739592,4.92395924 L8.5,7.29791847 L8.5,7.29791847 Z"></path>
@@ -105,26 +98,25 @@
             </svg>
           </div>
           <h3 class="title" data-tid="elements_examples.success.title">Payment successful</h3>
-          <p class="message"><span data-tid="elements_examples.success.message">Thanks for trying Stripe Elements. No money was charged, but we generated a token: </span><span class="token" name='strip_Tocken'>tok_189gMN2eZvKYlo2CwTBv9KKh</span></p>
+          <p class="message"><span data-tid="elements_examples.success.message">Thanks for trying Stripe Elements. No money was charged, but we generated a token: </span><span class="token" name="token">gMN2eZvKYlo2CwTBv9KKh</span></p>
           <a class="reset" href="/">
             <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <path fill="#000000" d="M15,7.05492878 C10.5000495,7.55237307 7,11.3674463 7,16 C7,20.9705627 11.0294373,25 16,25 C20.9705627,25 25,20.9705627 25,16 C25,15.3627484 24.4834055,14.8461538 23.8461538,14.8461538 C23.2089022,14.8461538 22.6923077,15.3627484 22.6923077,16 C22.6923077,19.6960595 19.6960595,22.6923077 16,22.6923077 C12.3039405,22.6923077 9.30769231,19.6960595 9.30769231,16 C9.30769231,12.3039405 12.3039405,9.30769231 16,9.30769231 L16,12.0841673 C16,12.1800431 16.0275652,12.2738974 16.0794108,12.354546 C16.2287368,12.5868311 16.5380938,12.6540826 16.7703788,12.5047565 L22.3457501,8.92058924 L22.3457501,8.92058924 C22.4060014,8.88185624 22.4572275,8.83063012 22.4959605,8.7703788 C22.6452866,8.53809377 22.5780351,8.22873685 22.3457501,8.07941076 L22.3457501,8.07941076 L16.7703788,4.49524351 C16.6897301,4.44339794 16.5958758,4.41583275 16.5,4.41583275 C16.2238576,4.41583275 16,4.63969037 16,4.91583275 L16,7 L15,7 L15,7.05492878 Z M16,32 C7.163444,32 0,24.836556 0,16 C0,7.163444 7.163444,0 16,0 C24.836556,0 32,7.163444 32,16 C32,24.836556 24.836556,32 16,32 Z"></path>
             </svg>
           </a>
-      </div>
-    </div>
-  </section>
-  </main>
+        </div>
 
-        
+    </section>
+    <a href="/shop/cart" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#6772e5; color:#f6f9fc; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+    </main>
   </div>
 
   <!-- Simple localization script for Stripe's examples page. -->
   <script src="/javascripts/l10n.js" data-rel-js></script>
 
   <!-- Scripts for each example: -->
-
-  <script src="/javascripts/checkout.js" data-rel-js></script>
+  
+  <script src="/javascripts/example5.js" data-rel-js></script>
 
 </body>
 </html>
