charges and view changed

--- a/views/shop/cart.hbs
+++ b/views/shop/cart.hbs
@@ -35,7 +35,7 @@
 <hr>
 <div class="row d-flex justify-content-center text-center">
     <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-        <a href="/shop/checkout" type="button" class="btn btn-success">CheckOUt</a>
+        <a href="/shop/checkout" type="button" class="btn btn-success">Checkout</a>
     </div>
 </div>
 
