--- a/views/shop/checkout.hbs
+++ b/views/shop/checkout.hbs
@@ -186,7 +186,7 @@ label {
     <div class="col-md-6 text-center">
       
 
-      <form action="/shop/cart" method="POST">
+      <form action="/shop/checkout" method="POST">
         {{!-- Address --}}
         <h1>Address</h1>
         <div class="row">
