logout setup and authentication setup

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -14,7 +14,7 @@
         <i class="fas fa-user text-white"></i>  User managment
         </a> --}}
         <div class="dropdown">
-      <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Dropdown button
       </button>
         <div id='dropdown-menu' class="dropdown-menu" aria-labelledby="navbarDropdown">
